--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "128x128",
   "version": "0.1.0",
   "private": true,
+  "author": "inventivetalent",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,7 +11,9 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-image-upload-resize": "^2.2.1",
+    "vue-material": "^1.0.0-beta-11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
